--- a/.config/i3/config
+++ b/.config/i3/config
@@ -158,9 +158,6 @@ bar {
 
 bindsym $mod+shift+x exec i3lock -c 202020
 
-exec firefox
-
-
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5% #decrease sound volume
@@ -169,3 +166,8 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute s
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+
+#-- START TOMEK --
+exec firefox
+
+#-- END TOMEK --
